--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css" integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css"
+        integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css"
+        integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
 
 
 </head>
@@ -24,7 +26,7 @@
             </ul>
         </nav>
         <div id="logo">
-            <a href="">PAK UNITED ENTERPRISES</a>
+            PAK UNITED ENTERPRISES
         </div>
         <nav id="social-links">
             <ul>
@@ -65,9 +67,15 @@
 
             <h2>WELCOME TO OUR WEBSITE</h2>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis tempore laudantium veniam aliquam obcaecati ducimus debitis facilis necessitatibus blanditiis, perspiciatis architecto expedita deserunt dignissimos. Eaque porro, ad voluptas
-                dolorem illum explicabo nulla, eligendi odio amet doloribus aliquam dignissimos! Nulla ex quae saepe cumque doloribus unde. Alias quisquam explicabo error inventore, ratione dolor magni incidunt doloremque dolorem odit hic labore rerum
-                eveniet doloribus saepe eaque eius, praesentium distinctio et, accusantium harum. Doloribus consequuntur dignissimos officiis facere quisquam quaerat? Commodi atque, blanditiis sint id, nesciunt optio delectus repellat doloremque possimus,
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis tempore laudantium veniam aliquam
+                obcaecati ducimus debitis facilis necessitatibus blanditiis, perspiciatis architecto expedita deserunt
+                dignissimos. Eaque porro, ad voluptas
+                dolorem illum explicabo nulla, eligendi odio amet doloribus aliquam dignissimos! Nulla ex quae saepe
+                cumque doloribus unde. Alias quisquam explicabo error inventore, ratione dolor magni incidunt doloremque
+                dolorem odit hic labore rerum
+                eveniet doloribus saepe eaque eius, praesentium distinctio et, accusantium harum. Doloribus consequuntur
+                dignissimos officiis facere quisquam quaerat? Commodi atque, blanditiis sint id, nesciunt optio delectus
+                repellat doloremque possimus,
                 hic velit sunt magni minima totam quisquam vel aut consectetur saepe minus.
 
             </p>
@@ -77,16 +85,18 @@
                 <!-- box 1 -->
                 <div class="service-box">
                     <div class="service-img">
-                        <img src="Image/pic1.jpg" alt="">
+                        <img class="pic1" src="Image/pic1.jpg" alt="">
                     </div>
 
-                    <div class="sevice-title">
+                    <div class="service-title">
 
                         <h3>WEB DESIGNING</h3>
                     </div>
 
                     <div class="service-dsc">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor, sed facilis laudantium consequuntur voluptas!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor
+                            sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor,
+                            sed facilis laudantium consequuntur voluptas!</p>
                     </div>
 
                     <div class="call-to-action">
@@ -148,7 +158,9 @@
                     </div>
 
                     <div class="service-dsc">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor, sed facilis laudantium consequuntur voluptas!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor
+                            sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor,
+                            sed facilis laudantium consequuntur voluptas!</p>
                     </div>
 
                     <div class="call-to-action">
@@ -168,7 +180,9 @@
                     </div>
 
                     <div class="service-dsc">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor, sed facilis laudantium consequuntur voluptas!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor
+                            sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor,
+                            sed facilis laudantium consequuntur voluptas!</p>
                     </div>
 
                     <div class="call-to-action">
@@ -188,7 +202,9 @@
                     </div>
 
                     <div class="service-dsc">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor, sed facilis laudantium consequuntur voluptas!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, quia. Lorem ipsum dolor
+                            sit amet consectetur adipisicing elit. Molestias quo fugit adipisci? Atque quisquam dolor,
+                            sed facilis laudantium consequuntur voluptas!</p>
                     </div>
 
                     <div class="call-to-action">
@@ -205,12 +221,6 @@
     <footer>
         Pak United Enterprises by Sheikh Uzair
     </footer>
-
-
-
-
-
-
 
 
 </body>
